fix?: trying to resolve contact display issue on iphone chrome

--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -102,7 +102,7 @@
         text-align: center;
     }
     .card{
-        font-size: 10px;
+        font-size: 12px;
         padding-top: 2px;
         padding-bottom: 2px;
     }
